Homework 14
Resolved PR issues