@@ -5,10 +5,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.otus.hw.postgres.dto.GenreDto;
 import ru.otus.hw.postgres.mapper.GenreMapper;
-import ru.otus.hw.postgres.repository.PostgresGenreRepository;
+import ru.otus.hw.postgres.repositories.PostgresGenreRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,6 +21,6 @@ public class PostgresGenreService {
     public List<GenreDto> getGenres() {
         return genreRepository.findAll().stream()
                 .map(genreMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
